# PyPath

./: .gitignore  ADVANCED_ECOSIM_FEATURES.md  ADVANCED_FEATURES_README.md  ADVANCED_FEATURES_STATUS.md  APP_FEATURES_UPDATE.md  BAYESIAN_OPTIMIZATION_GUIDE.md  BAYESIAN_OPTIMIZATION_SUMMARY.md  BIODATA_MODULE_IMPLEMENTATION.md  BIODATA_SETUP_GUIDE.md  BIODATA_SHINY_INTEGRATION_COMPLETE.md  BIODATA_SHINY_INTEGRATION_PLAN.md  BOUNDARY_VISUALIZATION_FEATURE.md  BUGFIXES_APPLIED.md  CHANGELOG.md  CODEBASE_FIXES_2025-12-26.md  CODEBASE_REVIEW_2025-12-16.md  CODEBASE_REVIEW_2025-12-19_COMPREHENSIVE.md  CODEBASE_REVIEW_2025-12-20.md  CODEBASE_REVIEW_AND_OPTIMIZATION.md  CODEBASE_REVIEW_SUGGESTIONS.md  CODE_REFACTORING_COMPLETE.md  COMPREHENSIVE_COMPLETION_SUMMARY.md  CONDA_BIODATA_SETUP.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_CHECKLIST.md  DATABASE_TESTING_COMPLETE.md  DATA_SYNC_FIX.md  DEPLOYMENT.md  DIET_REWIRING_BUG_FIX.md  DIET_REWIRING_ECOSIM_INTEGRATION.md  ECOSPACE_QUICKSTART.md  EXAMPLE_MODEL_ADVANCED_FEATURES.md  FEATURES_VS_RPATH.md  FILE_FORMAT_SUPPORT.md  FINAL_SESSION_REPORT_2025-12-16.md  FORCING_IMPLEMENTATION_SUMMARY.md  HEXAGONAL_GRID_FIXES.md  HEXAGONAL_GRID_IMPLEMENTATION.md  HEXAGONAL_GRID_TESTS_SUMMARY.md  (+60 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-auto-fix.yml  ci-shiny-smoke.yml  ci.yml  deploy-test.yml  deploy.yml
Data/: LT2022_0.5ST_final7.ldb  LT2022_0.5ST_final7_log.xml
app/: STYLE_GUIDE.md  __init__.py  app.py  config.py  logger.py
app/pages/: __init__.py  about.py  analysis.py  data_import.py  diet_rewiring_demo.py  ecopath.py  ecosim.py  ecospace.py  forcing_demo.py  home.py  multistanza.py  (+5 more)
deploy/: README.md  deploy.sh  prepare_package.ps1  pypath_manage.sh  requirements.txt
docs/: BIODATA_QUICKSTART.md  ECOSPACE_API_REFERENCE.md  ECOSPACE_COMPLETION_SUMMARY.md  ECOSPACE_DEVELOPER_GUIDE.md  ECOSPACE_README.md  ECOSPACE_USER_GUIDE.md  RPATH_REFERENCE_TESTING.md  TESTING_BIODATA.md
example_model_data/: README.md  detritus_fate.csv  diet.csv  discard.csv  discard_fate.csv  landing.csv  model.csv  stanza_groups.csv  stanza_individual.csv
examples/: HEXAGONAL_GRIDS_GUIDE.md  IRREGULAR_GRIDS_GUIDE.md  baltic_sea_boundary.geojson  coastal_grid_example.geojson  ecospace_demo.py
pages/: __init__.py
scripts/: README.md  _count_chars.py  _fetch_root.py  analyze_seabirds_diagnostics.py  capture_rk4_month952.py  check_rpath.R  compare_all_groups.py  compare_det_inputs_rref.py  compare_detritus_sources.py  compare_discards_timeseries.py  compare_ecosim_links.py  compare_finite_diff_vs_stages.py  compare_group_timeseries.py  compare_initial_deriv.py  compare_intermediates.py  compare_iteration_ref.py  compare_pred_contribs.py  compare_py_vs_rpath_month952.py  compare_q_matrix_shapes.py  compare_qq_py_vs_rpath.py  compare_r_and_py_seabirds_params.py  compare_rpath_monthly_delta.py  compare_seabirds.py  compare_seabirds_parity.py  compare_seabirds_proper.py  compare_seabirds_traj.py  compare_seabirds_traj_aligned.py  compare_with_constant_Q.py  compare_with_noint.py  compute_bvec_ref.py  compute_deriv_discards.py  compute_parity_adjusted.py  compute_parity_from_accum.py  debug_extraction.R  debug_rpath_load.R  debug_rpath_output.R  debug_summary.json  deploy.ps1  deploy.sh  deriv_at_init.py  (+69 more)
tests/: README_SHINY_TESTS.md  TEST_HEXAGONAL_GRIDS.md  __init__.py  test_adjustments.py  test_analysis.py  test_app_import.py  test_backward_compatibility.py  test_biodata.py  test_biodata_integration.py  test_debug_forcing.py  test_detritus_consumption.py  test_detritus_fish_detfrac_addition.py  test_detritus_fish_discard_reproducer.py  test_detritus_nointegrate.py  test_diet_rewiring.py  test_dispersal.py  test_ecobase.py  test_ecopath.py  test_ecopath_input_conversion.py  test_ecosim.py  test_ecosim_model_type.py  test_ecosim_qlink.py  test_ecosim_stanzas.py  test_environmental.py  test_ewemdb.py  test_file_format_support.py  test_forcing.py  test_grid_creation.py  test_habitat.py  test_hexagonal_grids.py  test_import_diet.py  test_instrumentation_ab_direct.py  test_instrumentation_deprecation.py  test_instrumentation_indices.py  test_irregular_grids.py  test_lt_model.py  test_optimization_integration.py  test_optimization_scenarios.py  test_optimization_unit.py  test_output_shape.py  (+29 more)
(+92 files in other folders)
