[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypath-ecopath"
version = "0.2.2"
description = "Python implementation of Ecopath with Ecosim for food web modeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyPath Development Team"}
]
keywords = ["ecology", "ecosystem", "food web", "ecopath", "ecosim", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
numba = [
    "numba>=0.57",
]
interactive = [
    "plotly>=5.0",
    "networkx>=3.0",
]
web = [
    "shiny>=1.0.0",
    "shinyswatch>=0.7.0",
    "httpx>=0.24",
    "uvicorn>=0.23",
]
biodata = [
    "pyworms>=0.2.1",
    "pyobis>=0.3.0",
    "requests>=2.28",
]
all = [
    "pypath-ecopath[dev,numba,interactive,web,biodata]",
]

[project.urls]
Homepage = "https://github.com/pypath-ecopath/pypath"
Documentation = "https://pypath-ecopath.readthedocs.io"
Repository = "https://github.com/pypath-ecopath/pypath"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require internet connection and real API calls (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "worms: marks tests that use WoRMS API",
    "obis: marks tests that use OBIS API",
    "fishbase: marks tests that use FishBase API",
]
# Timeout for integration tests
timeout = 300

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
